[package]
name = "tomiocodes-sled"
version = "1.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib/lib.rs"

[dependencies]
napi = "1"
napi-derive = "1"
sled = "0.34.6"
config = "0.11.0"

[target.'cfg(all(unix, not(target_env = "musl"), not(target_arch = "aarch64"), not(target_arch= "arm")))'.dependencies]
jemallocator = { version = "0.3", features = ["disable_initial_exec_tls"] }

[target.'cfg(all(windows, target_arch = "x86_64"))'.dependencies]
mimalloc = { version = "0.1" }

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
